# scypher-rust-GUI-in-progress

./: Multi‑Blockchain Address Derivation Security Analysis.md  crypto_security_analysis.md  tauri_connection_guide.md  tree.txt
docs/: Solución para Drag & Drop en Tauri v1.x con SCypher GUI.md  address derivation implementation guide for scypher rust project.md  address derivation implementation guide for scypher rust proyect.md  cardano_address_derivation_guide buena.md  cardano_address_derivation_guide.md  cardano_handoff_document plan implementacion cardano con librerias oficiales de github.md  cardano_solana_derivation.md  cardano_solana_derivation_guide.md  ergo_derivation_guide.md  index.html  native_dialog_solution_guide.md  scypher_address_derivation_implementation.md
src/: context_handoff_document.md  index.html  index.html  (main work in progress)  index.html (for testing address derivation)  tree.txt
src-tauri/: Cargo.toml  setup que estamos trabajando.txt  tauri.conf.json  tree.txt
src-tauri/back/: Cargo.toml  claude rol.md  salida.txt
src-tauri/back/src/: addresses.rs  commands.rs  main.rs
src-tauri/back/src/bip39/: mod.rs  validation.rs
src-tauri/back/src/cli/: display.rs  input.rs  mod.rs  silent.rs
src-tauri/back/src/crypto/: keystream.rs  mod.rs  xor.rs
src-tauri/back/src/security/: environment.rs  process.rs
src-tauri/src/: Archivo de texto.txt  addresses.rs  addresses.rs backup perfetopero sucio  commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/bip39/: conversion.rs  stubs.rs  wordlist.rs
src-tauri/src/cli/: menu.rs  output.rs
src-tauri/src/crypto/: checksum.rs  keystream.rs  stubs.rs
src-tauri/src/security/: memory.rs  mod.rs
src/assets/: tree.txt
src/assets/css/: components.css  main.css
src/assets/js/: app.js  app.js back  app.js back 2  components.js  crypto-worker.js  utils.js
src/assets/templates/: derive-tab.html  transform-tab.html
