[package]
name = "scypher-gui"
version = "3.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [ "dialog-open", "fs-read-file", "fs-exists", "clipboard-all", "dialog-save", "fs-write-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tus dependencias existentes de SCypher
clap = "4.0"
argon2 = "0.5"
hex = "0.4"
sha2 = "0.10"
zeroize = "1.6"
ctrlc = "3.0"
rand = "0.8"
rpassword = "7.0"      # Para lectura segura de contraseñas
libc = "0.2"           # Para funciones de sistema Unix
