[package]
name = "scypher-gui"
version = "3.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

# =============================================================================
# DEPENDENCIAS TAURI Y SERIALIZACIÓN (MANTENER EXACTAMENTE COMO ESTABAN)
# =============================================================================
[dependencies]
tauri = { version = "1.8", features = [ "dialog-save", "dialog-open", "dialog-confirm", "dialog-message", "fs-read-file", "fs-exists", "clipboard-all", "fs-write-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"

# =============================================================================
# DEPENDENCIAS CORE DE SCYPHER (MANTENER EXACTAMENTE COMO ESTABAN)
# =============================================================================
clap = "4.0"
argon2 = "0.5"
hex = "0.4"
sha2 = "0.10"
zeroize = "1.6"  # CRÍTICO - MANTENER ESTA VERSIÓN EXACTA
ctrlc = "3.0"
rand = "0.8"
rpassword = "7.0"
libc = "0.2"

# =============================================================================
# CRIPTOGRAFÍA Y HD WALLET (MANTENER EXACTAMENTE COMO ESTABAN)
# =============================================================================
bip32 = "0.5"
bip39-crate = { package = "bip39", version = "2.0" }
bitcoin = "0.30"
secp256k1 = { version = "0.27", features = ["recovery", "rand-std"] }
ethereum-types = "0.14"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ripemd = "0.1"
bs58 = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
elliptic-curve = "0.13"

# =============================================================================
# DEPENDENCIAS ESPECÍFICAS DE REDES (MANTENER EXACTAMENTE COMO ESTABAN)
# =============================================================================

# ERGO - MANTENER INTACTO
ergo-lib = { version = "0.24", features = ["mnemonic_gen"] }

# CARDANO - MANTENER INTACTO
blake2 = "0.10"
crc32fast = "1.3"
bech32 = "0.9"
pbkdf2 = "0.12"
hmac = "0.12"
base32 = "0.4"
ed25519-bip32 = "0.4"
pallas = "0.24"
pallas-addresses = "0.24"
pallas-crypto = "0.24"

# SOLANA Y DEPENDENCIAS Ed25519 (MANTENER COMO ESTABAN)
ed25519-dalek = "2.0"


# =============================================================================
# DEPENDENCIAS CRÍTICAS FUNCIONANDO (NO TOCAR)
# =============================================================================

# WASM-BINDGEN - MANTENER VERSIÓN EXACTA QUE FUNCIONA
wasm-bindgen = "0.2.88"

# CARDANO OFICIAL - MANTENER VERSIÓN EXACTA QUE FUNCIONA
cardano-serialization-lib = { git = "https://github.com/Emurgo/cardano-serialization-lib", tag = "12.0.0" }

# SOLANA OFICIAL - MANTENER VERSIÓN EXACTA QUE FUNCIONA
solana-program = { git = "https://github.com/solana-labs/solana", tag = "v1.8.16" }

# =============================================================================
# NUEVAS DEPENDENCIAS PARA SOLANA MEJORADO (SOLO AGREGAR ESTAS)
# =============================================================================

# Dependencias adicionales para implementación Solana robusta
# (Estas son las ÚNICAS líneas nuevas que vamos a agregar)
# hmac = "0.12"  # Ya existe arriba
# sha2 = "0.10"  # Ya existe arriba
# ed25519-dalek = "2.0"  # Ya existe arriba

# =============================================================================
# NOTAS IMPORTANTES
# =============================================================================
# 1. Todas las dependencias existentes se mantienen EXACTAMENTE iguales
# 2. Solo se agregaron comentarios para organización
# 3. NO se cambió ninguna versión existente
# 4. Cardano, Solana, y todas las redes siguen funcionando
# 5. zeroize 1.6 se mantiene (CRÍTICO para compatibilidad)
