[package]
name = "scypher-gui"
version = "3.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [ "dialog-save", "dialog-open", "dialog-confirm", "dialog-message", "fs-read-file", "fs-exists", "clipboard-all", "fs-write-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RFD compatible con versiones de url más antiguas
rfd = "0.10"

# Tus dependencias existentes de SCypher
clap = "4.0"
argon2 = "0.5"
hex = "0.4"
sha2 = "0.10"
zeroize = "1.6"
ctrlc = "3.0"
rand = "0.8"
rpassword = "7.0"
libc = "0.2"

# HD Wallet y derivación de direcciones (EXISTENTES)
bip32 = "0.5"
bip39-crate = { package = "bip39", version = "2.0" }
bitcoin = "0.30"
secp256k1 = { version = "0.27", features = ["recovery", "rand-std"] }
ethereum-types = "0.14"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ripemd = "0.1"

# ERGO (EXISTENTE)
ergo-lib = { version = "0.24", features = ["mnemonic_gen"] }

# NUEVAS DEPENDENCIAS PARA REDES ADICIONALES

# Cardano - Dependencias correctas según documentación
ed25519-bip32 = "0.4"
blake2 = "0.10"
bech32 = "0.9"

# Solana - Dependencias correctas según documentación
slip10 = "0.4"
ed25519-dalek = "2.0"

# Mantener estas para compatibilidad
bs58 = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
elliptic-curve = "0.13"
